<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_CSVProcess" Id="{69c53c48-021c-4aea-9833-ec2a6a27b5b9}">
    <Declaration><![CDATA[TYPE ST_CSVProcess :
STRUCT
	
	//INPUTS
	bWriteData			: BOOL;
	bWriteCSV			: BOOL;
	sFileNamePath		: STRING(255);
	sDate				: STRING(255);
	aDataHistoryArrayLength : DINT;
	nMAX_CSV_ROWS		: UDINT;
	nMAX_CSV_COLUMNS	: UDINT;

	//OUTPUTS
	bError				: BOOL;
	bBusy				: BOOL;
	
	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>