<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_Master" Id="{ff1c03dd-d56c-490f-bced-572c30dff423}">
    <Declaration><![CDATA[VAR_GLOBAL
////////////////////////////////////////:	///////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////////////////////GENERIC/////////////////////////////////////////////////////////////////////////////////////

	// PowerUP 
	tonSystemPowerUP				:TON;
	tSystemPowerUP_Time				:TIME								:=T#35S;
	bSystemPoweringUP				:BOOL								:=TRUE; //Global System PowerUP Flag
	
	fbSystemShutDown     	        : NT_Shutdown;
	stButtonsLamps					: ST_ButtonsLamps;
	stPuls							: ST_Puls;		

	stCSVProcess					: ST_CSVProcess;
/////////////////////////////////////////////////////////////////////////////////////Event Log/////////////////////////////////////////////////////////////////////////////////////
	
	stStationEvents				: ARRAY[0..3] OF  ST_StationEvents;//0: GENERAL
																	//1: STATION 1
																	//1: STATION 2
																	//3: STATION 3
	astActiveEvents				: ARRAY [0..50] OF ST_ActiveEvents;
	stEventsAssigment			: ST_EventsAssigmentGeneral;

/////////////////////////////////////////////////////////////////////////////////////MACHINE CONTROL////////////////////////////////////////////////////////////////////////////
	
	stMachineStatus					: ST_MachineStatus;	
	stMasterCtrl					: ST_MasterCTRL;
	bStatisticsTest					: ARRAY[0..6] OF  BOOL;
	
////////////////////////////////////////////////////////////////////////////////////SYSTEM////////////////////////////////////////////////////////////////////////////
	stSystemTime				: TIMESTRUCT;
	sSystemTime					: STRING(255);
	sSystemDate					: STRING(255);
	
	bResetTest								: BOOL;
	tonResetTest							: TON;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>